  quick copy is activated with an option-drag.

- The order of the elements in the recent file list was being reversed
  each time jEdit was restarted if 'sort recent files' was switched off.

- PluginJAR.generateCache() didn't correctly handle the case where a
  plugin JAR file had an actions.xml but no core class.

- Unloading a plugin did not remove the buttons for its docked windows.

}}}
{{{ API Changes

- Added "optional dependencies". An optional dependency looks like this:

  plugin.MyPlugin.depend.0=optional plugin AnotherPlugin 1.3.1

  On startup, optional dependency are ignored; if AnotherPlugin does not
  exist, MyPlugin will still load. However, if AnotherPlugin is unloaded
  while jEdit is running, all plugins that depend on it, even ones with
  optional dependencies, will be reloaded.

  If your plugin does a runtime check for the existence of another
  plugin, and uses its services if it exists, but can otherwise
  function fine, then you *MUST* add an optional dependency on that
  plugin, otherwise reloading plugins will leave stale classes in the
  active class loader.

- jEdit.getProperties() now returns a new collection, not the internal
  insance.

}}}

}}}

{{{ Version 4.2pre9

Thanks to Brad Mace, David Hardin,  Matthew J. Price, Ollie Rutherfurd,
Patrick Tingen, Thomas Galvin and Wiktor Adamski for contributing to
this release.

{{{ Miscellaneous

- Includes new "Create Get/Set Methods" macro (Thomas Galvin).

- Minor improvements to "Deep Indent" feature (Brad Mace).

- "Reload All Buffers" command now only asks for confirmation if there
  are buffers with unsaved changes (Ollie Rutherfurd).

}}}
{{{ Syntax Highlighting

- Updated Visual FoxPro syntax highlighting (Matthew J. Price).

- Updated Lisp syntax highlighting (David Hardin).

- Updated Progress syntax highlighting (Patrick Tingen)

}}}
{{{ Bug Fixes

- Horizontal scroll bar was not updated sometimes.

- The code that determines if a selection is being dragged is now much